refactor: 프롬프트 애플리케이션 레이어 재구성
- UnifiedGeneratePromptResult를 query에서 generate 포트로 이동
- 시맨틱 해석: RecommendationResolutionResult 추가, ResolutionResult 확장
- ExcludeFromComponentScan 제거, global/scan 패키지로 컴포넌트 스캔 설정 이전
- 생성 엔진·오케스트레이터·커맨드·유스케이스 및 레거시 클래스 정리
- 관련 어댑터·매퍼·테스트 수정 및 docs 추가